@@ -1,3 +1,4 @@
+11/18/13 light gray background for control panel
 11/18/13 add 'Molecule count' and 'ratio' check boxes (no view components yet)
 11/18/13 add options to various model elements, simplify usage of constructors, fix 'Reset All'
 11/18/13 use opaque colors for solutes, so that color of solution matches dropper when solution is 100% solute
